...
    <string name="app_name">Geotechpy Stock App</string>

    <string name="action_settings">Settings</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="sync">Sync</string>
    <string name="db_reset">Database Reset Successful</string>
    <string name="confirm_action">Confirm action?</string>
    <string name="confirm_title">Confirmation required</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="zone_admin" translatable="false">A</string>
    <string name="zone_deposit" translatable="false">D</string>
    <string name="zone_lab" translatable="false">L</string>
    <string name="zone_both" translatable="false">Y</string>
    <string name="stock_active" translatable="false">A</string>
    <string name="stock_confirmed" translatable="false">C</string>
    <string name="db_sync">Database Sync Completed</string>
    <string name="empty_field_user">Empty Field User</string>
    <string name="empty_field_password">Empty Field Password</string>
    <string name="invalid_user">Invalid User</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="title_activity_stock_type">Stock Type</string>
    <string name="deposit">Distributor</string>
    <string name="laboratory">Laboratory</string>
    <string name="title_activity_stock_list">Stock List</string>
    <string name="new_stock">New</string>
    <string name="sync_stock">Sync to Server</string>
...
    <string name="delete_item">Delete Item</string>
    <string name="new_item">New Item</string>
    <string name="title_activity_item">Item</string>
    <string name="item_code">Code</string>
    <string name="item_name">Name</string>
    <string name="item_qty">Qty</string>
    <string name="invalid_item_code">Invalid Item Code</string>
    <string name="invalid_item_name">Invalid Item Name</string>
    <string name="invalid_item_qty">Invalid Item Qty</string>
    <string name="invalid_item_zone">Invalid Item Zone</string>
    <string name="item_created">Item Created</string>
    <string name="item_updated">Item Updated</string>
    <string name="stockSerNr">Stock</string>
    <string name="zoneCode">Quadr.</string>
    <string name="must_select_zone">Must select a Quadrille</string>
    <string name="stock_detail_deleted">Stock Detail Deleted</string>
    <string name="stock_deleted">Stock Deleted</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="sync_please_wait">Please wait</string>
    <string name="sync_requesting_data">Requesting data</string>
    <string name="sync_unknown_error">Unknown error</string>
    <string name="sync_wscomm_error">WS Comm Error</string>
    <string name="sync_users">Synchronizing Users</string>
    <string name="sync_items">Synchronizing Items</string>
...
    <string name="item_number">Nr</string>
    <string name="header_stock" translatable="false">Id</string>
    <string name="header_zone">Quadr.</string>
    <string name="header_status">Status</string>
    <string name="header_item">Qty</string>
    <string name="save_stock">Save stock?</string>
    <string name="sure_delete">Are you sure you want to Delete?</string>
    <string name="back">Back</string>
    <string name="header_zone_name">Deposit</string>
    <string name="action_calculator">Calculator</string>
    <string name="calculator_not_found">Calculator not found</string>
    <string name="calc">Calculator</string>

...
