<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.geotechpy.geostock.ItemListActivity">

    <TextView
        android:id="@+id/tv_itemlist_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/tv_itemlist_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_item_list"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/tv_itemlist_stock_zone_code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tv_itemlist_stock_sernr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_itemlist_items"
        android:layout_alignLeft="@+id/tv_itemlist_stock_zone_code"
        android:layout_alignStart="@+id/tv_itemlist_stock_zone_code"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_itemlist_zone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_itemlist_username"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/tv_itemlist_stock_zone_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_itemlist_zone_name"
        android:layout_alignRight="@+id/tv_itemlist_zone_name"
        android:layout_below="@+id/tv_itemlist_zone_name"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/tv_itemlist_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_zone_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:layout_alignTop="@+id/tv_itemlist_zone_name"
        android:layout_alignLeft="@+id/btn_new"
        android:layout_alignStart="@+id/btn_new"/>

    <TextView
        android:id="@+id/tv_itemlist_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoneCode"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:layout_below="@+id/tv_itemlist_i"
        android:layout_alignLeft="@+id/tv_itemlist_i"
        android:layout_alignStart="@+id/tv_itemlist_i"/>

    <LinearLayout
        android:id="@+id/ll_items_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_itemlist_items"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_header_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".01"
            android:text="@string/item_number"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/item_header_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_code"/>

        <TextView
            android:id="@+id/item_header_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/item_name"/>

        <TextView
            android:id="@+id/item_header_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:text="@string/header_item"/>

        <TextView
            android:id="@+id/item_header_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""/>

        <TextView
            android:id="@+id/item_header_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""/>

    </LinearLayout>

    <ListView
        android:id="@+id/lv_itemlist_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ll_items_headers"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClickCancel"
        android:text="@string/back"/>

    <Button
        android:id="@+id/btn_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_cancel"
        android:onClick="onClickNew"
        android:text="@string/new_item"/>
</RelativeLayout>
