<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.geotechpy.geostock.ItemActivity">

    <TextView
        android:id="@+id/tv_item_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_item_username"
        android:text="@string/title_activity_item"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/tv_item_stock_sernr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_item_username"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_item_zone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tv_item_username"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <TextView
        android:id="@+id/tv_item_stock_zone_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_item_zone_name"
        android:layout_alignRight="@+id/tv_item_zone_name"
        android:layout_below="@+id/tv_item_zone_name"
        android:textAppearance="?android:attr/textAppearanceSmall"/>


    <TextView
        android:id="@+id/tv_item_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btn_ok"
        android:layout_toStartOf="@+id/btn_ok"
        android:text="@string/header_zone_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_item_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_item_i"
        android:layout_alignStart="@+id/tv_item_i"
        android:layout_below="@+id/tv_item_i"
        android:text="@string/zoneCode"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_item_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_item_title"
        android:text="@string/item_code"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_item_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_item_code"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_item_code"
        android:text="@string/item_name"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_item_name"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="3"
        android:maxLines="5"
        android:minLines="2"/>

    <TextView
        android:id="@+id/tv_item_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_item_name"
        android:text="@string/item_barcode"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_item_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_item_barcode"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/tv_item_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_item_barcode"
        android:text="@string/item_qty"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/et_item_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_item_qty"
        android:ems="10"
        android:inputType="numberDecimal"
        android:singleLine="true"/>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onClickOk"
        android:text="@string/ok"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:id="@+id/btn_calc"
        android:layout_above="@+id/btn_ok"
        android:layout_alignRight="@+id/btn_ok"
        android:layout_alignEnd="@+id/btn_ok"
        android:onClick="onClickOpenCalc"/>
</RelativeLayout>
