<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.geotechpy.geostock.StockTypeActivity">

    <TextView
        android:id="@+id/tv_stocktype_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <TextView
        android:id="@+id/tv_stocktype_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_stocktype_username"
        android:layout_toEndOf="@+id/tv_stocktype_username"
        android:layout_toRightOf="@+id/tv_stocktype_username"
        android:text="@string/title_activity_stock_type"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/btn_deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_stocktype_title"
        android:onClick="onClickDeposit"
        android:text="@string/deposit"/>

    <Button
        android:id="@+id/btn_laboratory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickLaboratory"
        android:text="@string/laboratory"
        android:layout_below="@+id/btn_deposit"/>

</RelativeLayout>
